Adding author to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,6 @@
             "title" : "VoiceTest",
             "URL" : "https://github.com/QTheTran/MeiliVoiceTest/archive/master.zip"
         }
-    ]
+    ],
+    "author" : "QTheTran"
 }
